# Multi-Source-Candidate-Data-Transformer

./: README.md  STAGE-1_DESIGN.md  candidate.json  main.py  pyproject.toml
candidate_transformer/: __init__.py  orchestrator.py
candidate_transformer/confidence/: __init__.py  calculator.py
candidate_transformer/config/: __init__.py  constants.py  pipeline_config.py
candidate_transformer/extractors/: __init__.py  base.py  csv_extractor.py  json_extractor.py  pdf_extractor.py  txt_extractor.py
candidate_transformer/mergers/: __init__.py  merger.py
candidate_transformer/models/: __init__.py  canonical.py  intermediate.py  provenance.py
candidate_transformer/normalizers/: __init__.py  base.py  date.py  email.py  name.py  phone.py  skills.py
candidate_transformer/projection/: __init__.py  projector.py
candidate_transformer/provenance/: __init__.py  tracker.py
candidate_transformer/utils/: __init__.py
candidate_transformer/validators/: __init__.py  validator.py
data/: ats.json  config.json  notes.txt  recruiter.csv
tests/: __init__.py  test_config_errors.py  test_merger.py  test_normalizers.py  test_projector.py  test_validator.py
