[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-Source Candidate Data Transformer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "typer>=0.12.3",
    "pymupdf>=1.24.5",
    "pandas>=2.2.2",
    "rapidfuzz>=3.9.3",
    "python-dateutil>=2.9.0.post0",
    "phonenumbers>=8.13.39",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
